--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -123,3 +123,15 @@ body {
 .react-multi-carousel-item {
   padding: 0 8px !important;
 }
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+
+  }
+  body {
+    @apply bg-background text-foreground;
+
+  }
+
+}
